<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <RadioGroup
        android:id="@+id/radioGroupLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/englishButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/hindiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hindi"/>

        <RadioButton
            android:id="@+id/marathiButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/marathi"/>

    </RadioGroup>

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"
        android:layout_marginTop="24dp"/>
</LinearLayout>
